--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "01-socket-server-basic",
+  "name": "bandnames-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "uuid": "^8.3.2"
   }
 }
